Mengubah Title dan navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Akhir AOS -->
+    <link rel="icon" href="img/logo.png" type="image" sizes="40x40" />
     <title>Portfolio | Joni Maulana</title>
   </head>
   <body id="home">
@@ -36,6 +37,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projek">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -259,7 +263,7 @@
 
     <script>
       gsap.registerPlugin(TextPlugin);
-      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Mahasiswa | Programer & Fotografer" });
+      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Mahasiswa | Programmer & Fotografer" });
       gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
       gsap.from(".display-4", { duration: 1, x: "-50", opacity: 0, delay: 0.5, ease: "back" });
     </script>
