--- a/index.html
+++ b/index.html
@@ -108,20 +108,23 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3 ">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="100">
-            <img src="img/projek/6.png" class="card-img-top" alt="project 1" />
+            <img src="img/projek/6.png" alt="project 1" />
+            <a href="http://tokojoni.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">web e commerce yang bertema menjual sepatu sepatu</p>
+              <p class="card-text">Web e commerce yang bertema menjual
+                sepatu sepatu.</p>
+
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1000">
-            <img src="img/projek/2.jpg" class="card-img-top" alt="project 2" />
+            <img src="img/projek/7.png" class="card-img-top" alt="project 2" />
+            <a href="https://www.instagram.com/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, molestias aut.
-                Similique iure
+              <p class="card-text">Website company profile Hikmah Ponsel Pontianak yang bergerak di bidang pulsa.
               </p>
             </div>
           </div>
@@ -129,6 +132,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
             <img src="img/projek/3.jpg" class="card-img-top" alt="project 3" />
+            <a href="https://www.instagram.com/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
