--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1000">
             <img src="img/projek/7.png" class="card-img-top" alt="project 2" />
-            <a href="https://www.instagram.com/" class="btn btn-sm  stretched-link"></a>
+            <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Website company profile Hikmah Ponsel Pontianak yang bergerak di bidang pulsa.
               </p>
@@ -132,7 +132,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
             <img src="img/projek/3.jpg" class="card-img-top" alt="project 3" />
-            <a href="https://www.instagram.com/" class="btn btn-sm  stretched-link"></a>
+            <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -142,6 +142,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
             <img src="img/projek/4.jpg" class="card-img-top" alt="project 4" />
+            <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -151,6 +152,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
             <img src="img/projek/5.jpg" class="card-img-top" alt="project 5" />
+            <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
