--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
             <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Website company profile Hikmah Ponsel Pontianak yang bergerak di bidang pulsa.
+                (Coming
+                soon)
               </p>
             </div>
           </div>
@@ -134,8 +136,8 @@
             <img src="img/projek/3.jpg" class="card-img-top" alt="project 3" />
             <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's. (Coming soon)</p>
             </div>
           </div>
         </div>
@@ -144,8 +146,8 @@
             <img src="img/projek/4.jpg" class="card-img-top" alt="project 4" />
             <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's. (Coming soon)</p>
             </div>
           </div>
         </div>
@@ -154,8 +156,8 @@
             <img src="img/projek/5.jpg" class="card-img-top" alt="project 5" />
             <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's. (Coming soon)</p>
             </div>
           </div>
         </div>
@@ -238,7 +240,7 @@
           </div>
           <form name="wpu-contact-form">
             <div class="mb-3">
-              <label for="name" class="form-label">Nama Lengkap</label>
+              <label for="name" class="form-label">Full Name</label>
               <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
             </div>
             <div class="mb-3">
