--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
       <div class="row justify-content-center fs-5 text-center">
         <div class="col-md-4" data-aos="fade-right" data-aos-duration="1500">
           <p>
-            Lulusan SMKN 3 Pontianak dalam bidang Marketing tahun 2019.Memiliki pengalaman praktek magang selama 3
-            bulan. Saya memiliki minat dalam bidang IT. Saya seorang yang berfikir analis, mampu berkomunikasi dengan
-            baik memiliki
-            pengawasan kualitas terhadap yang di kerjakan serta mengerjakan tugas dengan tulus.
+            I was born on 21st June 2000 at Pontianak. I’m 21 years old. I was graduated at Vocation High School 3
+            Pontianak and majored in Marketing. In 2019, I continued my study at Prisma Profesional Surabaya and majored
+            in Computing Technology. I ever apprenticed in Mitra Anda Kobar as a Packer and PT. Putra Kalma Raya as a
+            Graphic Designer.
           </p>
         </div>
         <div class="col-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="400">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia expedita ducimus, quam unde tempore
-            veritatis nostrum enim ad ullam excepturi distinctio cupiditate in aliquid corrupti?</p>
+          <p>I can operate Adobe Photoshop, Adobe Premiere, and Filmora. I love to learn a new thing
+            and I have a curiosity. When I do something, I always do that things with heartily. I’m a person who always
+            manages the time, I’m a good listener, and I’m a thinking analyst. I like to work with a team. And then, I
+            have an interest in Information Technology.</p>
         </div>
       </div>
     </div>
@@ -113,8 +115,7 @@
             <img src="img/projek/6.png" alt="project 1" />
             <a href="http://tokojoni.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Web e commerce yang bertema menjual
-                sepatu sepatu.</p>
+              <p class="card-text">Responsive e-commerce website with the theme of selling shoes.</p>
 
             </div>
           </div>
@@ -124,9 +125,8 @@
             <img src="img/projek/7.png" class="card-img-top" alt="project 2" />
             <a href="#" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Website company profile Hikmah Ponsel Pontianak yang bergerak di bidang pulsa.
-                (Coming
-                soon)
+              <p class="card-text">Website company profile Hikmah Ponsel Pontianak which is engaged in digital products.
+                (Coming soon)
               </p>
             </div>
           </div>
