Penambahan link hikmah

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1000">
             <img src="img/projek/7.png" class="card-img-top" alt="project 2" />
-            <a href="#" class="btn btn-sm  stretched-link"></a>
+            <a href="http://hikmahponsel.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Website company profile Hikmah Ponsel Pontianak which is engaged in digital products.
                 (Coming soon)
