--- a/index.html
+++ b/index.html
@@ -126,18 +126,16 @@
             <a href="http://hikmahponsel.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
               <p class="card-text">Website company profile Hikmah Ponsel Pontianak which is engaged in digital products.
-
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
-            <img src="img/projek/3.jpg" class="card-img-top" alt="project 3" />
-            <a href="#" class="btn btn-sm  stretched-link"></a>
+            <img src="img/projek/8.png" class="card-img-top" alt="project 3" />
+            <a href="http://stockbarang.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's. (Coming soon)</p>
+              <p class="card-text">Simple warehouse stock website using multi-level login system.</p>
             </div>
           </div>
         </div>
@@ -181,42 +179,42 @@
       <div class="row justify-content-center">
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/1.png" alt="Gambar 1" class="img-fluid gallery-img" />
+            <img src="img/gallery/1.png" alt="Gambar 1" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/2.png" alt="Gambar 2" class="img-fluid gallery-img" />
+            <img src="img/gallery/2.png" alt="Gambar 2" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/3.png" alt="Gambar 3" class="img-fluid gallery-img" />
+            <img src="img/gallery/3.png" alt="Gambar 3" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/4.png" alt="Gambar 4" class="img-fluid gallery-img" />
+            <img src="img/gallery/4.png" alt="Gambar 4" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/5.png" alt="Gambar 5" class="img-fluid gallery-img" />
+            <img src="img/gallery/5.png" alt="Gambar 5" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/6.png" alt="Gambar 6" class="img-fluid gallery-img" />
+            <img src="img/gallery/6.png" alt="Gambar 6" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/7.png" alt="Gambar 7" class="img-fluid gallery-img" />
+            <img src="img/gallery/7.png" alt="Gambar 7" class="img-fluid gallery" />
           </a>
         </div>
         <div class="col-md-3">
           <a href="">
-            <img src="img/gallery/8.png" alt="Gambar 8" class="img-fluid gallery-img" />
+            <img src="img/gallery/8.png" alt="Gambar 8" class="img-fluid gallery" />
           </a>
         </div>
       </div>
