Penambahan card projek

--- a/index.html
+++ b/index.html
@@ -141,11 +141,10 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card" data-aos="zoom-in-down" data-aos-duration="1500" data-aos-delay="200">
-            <img src="img/projek/4.jpg" class="card-img-top" alt="project 4" />
-            <a href="#" class="btn btn-sm  stretched-link"></a>
+            <img src="img/projek/9.png" class="card-img-top" alt="project 4" />
+            <a href="http://typingspeed.rf.gd/" class="btn btn-sm  stretched-link"></a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's. (Coming soon)</p>
+              <p class="card-text">This website aims to measure typing speed with a simple display.</p>
             </div>
           </div>
         </div>
